tldr fixed stuff